<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemViewRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditWorkActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backButton"
                style="@style/buttonToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_baseline_arrow_back_24" />


            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/toolbarText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_work" />

            <ImageButton
                android:id="@+id/addBUtton"
                style="@style/buttonToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_baseline_check_24" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/viewTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"
        android:text="@string/app_date"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:background="@color/purple_200" />

    <View
        android:id="@+id/helper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@id/viewTextDate"
        app:layout_constraintEnd_toEndOf="@id/viewTextDate" />


    <!--    WorkName-->
    <TextView
        android:id="@+id/viewTextWorkNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:maxLines="1"
        android:text="@string/work_name"
        app:layout_constraintStart_toStartOf="@+id/viewTextWorkName"
        app:layout_constraintTop_toBottomOf="@id/viewTextDate"
        tools:layout_editor_absoluteY="263dp" />

    <EditText
        android:id="@+id/viewTextWorkName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/viewTextCost"
        app:layout_constraintEnd_toStartOf="@+id/viewTextCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTextWorkNameTitle"
        tools:text="Install" />

    <!--    Cost -->
    <TextView
        android:id="@+id/viewTextCostTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:maxLines="1"
        android:text="@string/cost"
        app:layout_constraintBaseline_toBaselineOf="@id/viewTextWorkNameTitle"
        app:layout_constraintStart_toStartOf="@+id/viewTextCost"
        tools:layout_editor_absoluteY="263dp" />


    <EditText
        android:id="@+id/viewTextCost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:inputType="numberDecimal"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/viewTextWorkName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewTextWorkName"
        tools:layout_editor_absoluteY="285dp"
        tools:text="400" />

    <!--    Description-->
    <TextView
        android:id="@+id/viewTextDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTextCost" />

    <EditText
        android:id="@+id/viewTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTextDescriptionTitle"
        tools:text="install and tune" />

    <RadioGroup
        android:id="@+id/radioWorkStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/viewTextDescription">

        <RadioButton
            android:id="@+id/workStatusInProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/ic_repair"
            android:drawableTint="@color/yellow"
            android:gravity="center"
            android:text="@string/work_status_in_progress"
            android:textColor="@color/yellow" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/ic_baseline_arrow_forward_24" />
        <!--        style="@style/imageInactive"-->
        <RadioButton
            android:id="@+id/workStatusCompleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:button="@null"
            android:drawableTop="@drawable/ic_repair"
            android:drawableTint="@color/green"
            android:gravity="center"
            android:text="@string/work_status_completed"
            android:textColor="@color/green" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center"

            android:src="@drawable/ic_baseline_arrow_forward_24" />

        <RadioButton
            android:id="@+id/workStatusPending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:baselineAligned="false"
            android:button="@null"
            android:drawableTop="@drawable/ic_repair"
            android:drawableTint="@color/red"
            android:gravity="center"
            android:text="@string/work_status_pending"
            android:textColor="@color/red" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/removeBUtton"
        style="@style/buttonBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioWorkStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>