<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemViewRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EditCarActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backButton"
                style="@style/buttonToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/ic_baseline_arrow_back_24" />


            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/toolbarText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_car" />

            <ImageButton
                android:id="@+id/addBUtton"
                style="@style/buttonToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_baseline_check_24" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imagePreviewBackground"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/imagePreview"
        style="@style/camera_img"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="@id/imagePreviewBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imagePreviewBackground" />

    <View
        android:id="@+id/helper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/size24"
        app:layout_constraintBottom_toBottomOf="@id/imagePreviewBackground"
        app:layout_constraintEnd_toEndOf="@id/imagePreviewBackground" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/imageEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size16"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintEnd_toEndOf="@id/imagePreviewBackground"
        app:layout_constraintTop_toBottomOf="@id/helper"
        app:tint="@android:color/white" />

    <!--    ownerName-->
    <TextView
        android:id="@+id/viewTextOwnerNameTitle"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePreviewBackground" />

    <EditText
        android:id="@+id/viewTextOwnerName"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTextOwnerNameTitle"
        tools:text="Dorothy" />

    <!--    producer-->
    <TextView
        android:id="@+id/viewTextProducerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size4"
        android:maxLines="1"
        android:text="@string/producer"
        app:layout_constraintStart_toStartOf="@+id/viewTextProducer"
        app:layout_constraintTop_toBottomOf="@id/viewTextOwnerName" />

    <EditText
        android:id="@+id/viewTextProducer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size16"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/viewTextModel"
        app:layout_constraintEnd_toStartOf="@+id/viewTextModel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTextProducerTitle"
        tools:text="Ford" />

    <!--    model-->
    <TextView
        android:id="@+id/viewTextModelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size4"
        android:maxLines="1"
        android:text="@string/model"
        app:layout_constraintBaseline_toBaselineOf="@id/viewTextProducerTitle"
        app:layout_constraintStart_toStartOf="@+id/viewTextModel" />

    <EditText
        android:id="@+id/viewTextModel"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/viewTextProducer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewTextProducer"
        tools:text="Mustang" />

    <!--    plateNumber-->
    <TextView
        android:id="@+id/viewTextPlateNumberTitle"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTextModel" />

    <EditText
        android:id="@+id/viewTextPlateNumber"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTextPlateNumberTitle"
        tools:text="1238 KK" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/removeBUtton"
        style="@style/buttonBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTextPlateNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>